--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -58,7 +58,7 @@ body {
   flex-wrap: wrap;
   align-items: flex-start;
   padding-right: 4vw;
-  padding-top: 3vw;
+  padding-top: 4vw;
 }
 #title p {
   writing-mode: vertical-rl;
@@ -66,7 +66,7 @@ body {
   background-color: white;
   font-size: 3vw;
   padding: 0.5vw;
-  margin: 0.6vw;
+  margin: 0 0.6vw;
   border-radius: 0.5rem;
   font-family: "Kaisei Opti", serif;
 }
@@ -96,7 +96,7 @@ body {
   flex-direction: column;
 }
 #main-text h1 {
-  margin: 2rem 0;
+  margin: 3rem 0;
   text-align: center;
   font-size: 2.5rem;
   font-family: "Kaisei Opti", serif;
@@ -104,6 +104,7 @@ body {
 #main-text p {
   margin: 0.5rem 0;
   font-family: "Zen Maru Gothic", sans-serif;
+  letter-spacing: 1px;
 }
 
 #menu {
